--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Amazon Online shopping website"/>
     <title>Amazon</title>
     <!-- custom css file -->
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <header>
