--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Amazon</title>
     <!-- custom css file -->
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://kit.fontawesome.com/79ee77c34d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
